# ResourceAllocationPython_Simple_Bway

./: .envrc.example  .gitignore  .pre-commit-config.yaml  ALLOCATION_DATA_FIX_SUMMARY.md  ALLOCATION_HISTORY_FEATURE_SUMMARY.md  Allocation_Results_2025-08-04_15-07.xlsx  BUG3_ANALYSIS_AND_SCORECARD_SUMMARY.md  BUG3_ROOT_CAUSE_AND_SOLUTION.md  CI_FORMATTING_RESOLUTION.md  CLAUDE.md  CODEBASE_REVIEW_ARCHITECTURE.md  CODEBASE_REVIEW_CORE.md  CODEBASE_REVIEW_GUI.md  CODEBASE_REVIEW_SERVICES.md  CODEBASE_REVIEW_SUMMARY.md  CODEBASE_REVIEW_TESTING.md  COMPREHENSIVE_TEST_SUMMARY.md  DAILY_DETAILS_WRITER_FIX_SUMMARY.md  ERROR_FIX_SUMMARY.md  GUI_TESTING_CHECKLIST.md  GUI_UPDATES_SUMMARY.md  PHASE1_COMPLETE.md  README.md  RECOMMENDATIONS_IMPLEMENTATION.md  SCORECARD_FEATURE_DOCUMENTATION.md  TEMPLATE_ANALYSIS_REPORT.md  TEST_COVERAGE_REPORT.md  analyze_template_structure.py  create_gas_test_files.py  diagnose_dashboard_history.py  diagnose_history_save.py  diagnose_vehicle_log.py  fix_test_fixtures.py  focused_structure_analysis.py  generate_sample_output.py  gui.py  gui_app.py  main.py  performance_analysis_report.md  pyproject.toml  (+9 more)
.claude/: AGENT_USAGE_GUIDE.md
.claude/agents/: deployment-devops-specialist.md  excel-data-analyst.md.backup  excel-integration-specialist.md  gui-ux-specialist.md  performance-optimization-specialist.md  pytest-test-engineer.md.backup  python-performance-optimizer.md.backup  resource-allocation-expert.md  testing-qa-specialist.md
.claude/commands/: ra-debug-fix.md  ra-feature-dev.md  ra-optimize.md  ra-orchestrate.md
.github/: copilot-instructions.md
.github/workflows/: tests.yml
assets/icons/: README_ICON_ASSETS.md  app.icns  generate_icns.sh
bway_files/: VehiclesData.xlsx  daily-roster-09_19_2025.csv
bway_files/fwdbwyemployeefile/: AssociateData.csv
docs/: DEPLOYMENT_EXECUTIVE_SUMMARY.md  DEPLOYMENT_PLAN.md  FIX_OUTPUT_DATA_PLAN.md  GAS_ALLOCATION_FLOW_ANALYSIS.md  GAS_COMPLIANCE_SUMMARY.md  GAS_FIELD_MAPPING_ANALYSIS.md  GAS_IMPLEMENTATION_SUMMARY.md  GAS_Python_Comparison.md  GEOTAB_TYPE_FIELD_FIX.md  IMPLEMENTATION_PLAN.md  OPERATOR_TRAINING_GUIDE.md  PLAN_SEPARATE_RESULTS_FILE.md  PRODUCTION_READINESS_CHECKLIST.md  ROLLBACK_PLAN.md  ROUTE_CODE_FIX.md  SEPARATE_RESULTS_FILE_GUIDE.md  UNASSIGNED_VEHICLES_FIX_PLAN.md  USER_COMMUNICATION_PLAN.md  excel_integration_review.md  feature_specs_duplicate_validation_unassigned_sheet.md  user_guide_duplicate_validation_unassigned_sheet.md
docs/technical/: pandas-series-fix.md
inputs/: README.md
scripts/: build_mac_app.sh  create_test_scorecard.py  deployment_validation.py  rollback_automation.py  smoke_icon_test.py  update_auto_open.py
src/: __init__.py  main.py
src/core/: __init__.py  allocation_engine.py  base_service.py  gas_compatible_allocator.py
src/gui/: __init__.py  __main__.py  allocation_tab.py  associate_listing_tab.py  dashboard_tab.py  data_management_tab.py  log_viewer_tab.py  main_window.py  monitoring_tab.py  scorecard_tab.py  settings_tab.py
src/models/: __init__.py  allocation.py  associate.py  email.py  excel.py  scorecard.py
src/services/: __init__.py  allocation_history_service.py  allocation_output_writer.py  associate_service.py  border_formatting_service.py  caching_service.py  configuration_service.py  daily_details_thick_borders.py  daily_details_writer.py  dashboard_data_service.py  data_management_service.py  duplicate_validator.py  email_service.py  excel_service.py  form_service.py  logging_service.py  monitoring_service.py  optimized_duplicate_validator.py  optimized_excel_writer.py  optimized_thick_borders.py  performance_optimization_guide.md  scorecard_service.py  unassigned_vehicles_writer.py  unified_configuration_service.py  validation_service.py
src/utils/: create_template.py  performance_monitor.py  recent_files_manager.py
tests/: conftest.py  test_thick_borders.py
tests/gui/: test_gui_smoke.py
tests/integration/: test_duplicate_and_unassigned_integration.py  test_end_to_end_allocation.py  test_error_handling_recovery.py
tests/manual/: test_allocation_history.py  test_direct_history.py
tests/outputs/: test_daily_details_thick_borders.xlsx  test_daily_details_thick_borders_appended.xlsx
tests/performance/: test_large_dataset_performance.py
tests/unit/: test_associate_service.py  test_daily_details_thick_borders.py  test_date_formatting_consistency.py  test_duplicate_validator.py  test_gas_allocator_pandas_fix.py  test_gas_compatible_allocator_pandas_fix.py  test_gui_duplicate_validation.py  test_scorecard_service.py  (+1 more)
(+11 files in other folders)
